--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
