--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.122",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
+    "serverless": "^3.35.2",
+    "serverless-domain-manager": "^7.1.2",
+    "serverless-plugin-typescript": "^2.1.5",
+    "serverless-prune-plugin": "^2.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
