--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.122",
+    "@types/http-errors": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
@@ -25,6 +26,11 @@
   },
   "dependencies": {
     "@atproto/api": "^0.6.16",
-    "@atproto/xrpc": "^0.3.1"
+    "@atproto/did-resolver": "^0.1.0",
+    "@atproto/xrpc": "^0.3.1",
+    "@atproto/xrpc-server": "^0.3.1",
+    "@middy/core": "^4.6.4",
+    "@middy/http-header-normalizer": "^4.6.4",
+    "http-errors": "^2.0.0"
   }
 }
