--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^3.0.3",
     "serverless": "^3.35.2",
     "serverless-domain-manager": "^7.1.2",
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-typescript": "^2.1.5",
     "serverless-prune-plugin": "^2.0.2",
     "ts-node": "^10.9.1",
