--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,9 @@ custom:
     apiType: http
   syncSubscriberQueueTable: ${self:service}-${self:provider.stage}-sync-subscriber-queue
   subscriberFollowingTable: ${self:service}-${self:provider.stage}-subscriber-following
+  blueskyAuth:
+    identifier: ${ssm:/bluesky-feeds/${self:provider.stage}/service/identifier}
+    password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
 
 	
 plugins:
@@ -56,6 +59,9 @@ functions:
           maximumRetryAttempts: 5
           filterPatterns:
             - eventName: [INSERT, MODIFY]
+    environment:
+      BLUESKY_SERVICE_IDENTIFIER: ${self:custom.blueskyAuth.identifier}
+      BLUESKY_SERVICE_PASSWORD: ${self:custom.blueskyAuth.password}
     iamRoleStatements:
       - Effect: "Allow"
         Action:
