Save and Aggregate Followers

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,8 @@ provider:
     name: ${ssm:deployment-artifacts-bucket}
   environment:
     PUBLIC_HOSTNAME: ${self:custom.customDomain.domainName}
+    SUBSCRIBER_FOLLOWING_TABLE: ${self:custom.subscriberFollowingTable}
+
 
 custom:
   prune:
