--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@atproto/xrpc": "^0.3.1",
     "@atproto/xrpc-server": "^0.3.1",
     "@aws-sdk/client-dynamodb": "^3.418.0",
+    "@aws-sdk/client-sqs": "^3.418.0",
     "@aws-sdk/lib-dynamodb": "^3.418.0",
     "@aws-sdk/util-dynamodb": "^3.418.0",
     "@middy/core": "^4.6.4",
