--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ provider:
     SYNC_SUBSCRIBER_QUEUE_TABLE: ${self:custom.syncSubscriberQueueTable}
     SUBSCRIBER_FOLLOWING_TABLE: ${self:custom.subscriberFollowingTable}
     MUTE_WORDS_TABLE: ${self:custom.muteWordsTable}
+    APP_STATUS_TABLE: ${self:custom.appStatusTable}
     BLUESKY_SERVICE_USER_DID: ${ssm:/bluesky-feeds/${self:provider.stage}/service/user-did}
 
 
@@ -32,6 +33,7 @@ custom:
   syncSubscriberQueueTable: ${self:service}-${self:provider.stage}-sync-subscriber-queue
   subscriberFollowingTable: ${self:service}-${self:provider.stage}-subscriber-following
   muteWordsTable: ${self:service}-${self:provider.stage}-mute-words
+  appStatusTable: ${self:service}-${self:provider.stage}-app-status
   blueskyAuth:
     identifier: ${ssm:/bluesky-feeds/${self:provider.stage}/service/identifier}
     password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
@@ -173,3 +175,15 @@ resources:
             KeyType: HASH
           - AttributeName: muteWord
             KeyType: RANGE
+
+    AppStatusTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.appStatusTable}
+        AttributeDefinitions:
+          - AttributeName: setting
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: setting
+            KeyType: HASH
