--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.122",
     "@types/http-errors": "^2.0.2",
+    "@types/ws": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
@@ -28,6 +29,7 @@
   "dependencies": {
     "@atproto/api": "^0.6.16",
     "@atproto/did-resolver": "^0.1.0",
+    "@atproto/repo": "^0.3.2",
     "@atproto/xrpc": "^0.3.1",
     "@atproto/xrpc-server": "^0.3.1",
     "@aws-sdk/client-dynamodb": "^3.418.0",
