--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
     SUBSCRIBER_FOLLOWING_TABLE: ${self:custom.subscriberFollowingTable}
     MUTE_WORDS_TABLE: ${self:custom.muteWordsTable}
     APP_STATUS_TABLE: ${self:custom.appStatusTable}
+    POSTS_TABLE: ${self:custom.postsTable}
     BLUESKY_SERVICE_USER_DID: ${ssm:/bluesky-feeds/${self:provider.stage}/service/user-did}
 
 
@@ -34,6 +35,7 @@ custom:
   subscriberFollowingTable: ${self:service}-${self:provider.stage}-subscriber-following
   muteWordsTable: ${self:service}-${self:provider.stage}-mute-words
   appStatusTable: ${self:service}-${self:provider.stage}-app-status
+  postsTable: ${self:service}-${self:provider.stage}-posts
   blueskyAuth:
     identifier: ${ssm:/bluesky-feeds/${self:provider.stage}/service/identifier}
     password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
@@ -213,6 +215,36 @@ resources:
             KeyType: HASH
           - AttributeName: qualifier
             KeyType: RANGE
+        StreamSpecification:
+          StreamViewType: NEW_IMAGE
+        TimeToLiveSpecification:
+          AttributeName: expiresAt
+          Enabled: True
+
+    PostsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.postsTable}
+        AttributeDefinitions:
+          - AttributeName: uri
+            AttributeType: S
+          - AttributeName: resolvedStatus
+            AttributeType: S
+          - AttributeName: createdAt
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: uri
+            KeyType: HASH
+        GlobalSecondaryIndexes:
+          - IndexName: ByResolvedStatusAndCreatedAt
+            KeySchema:
+              - AttributeName: resolvedStatus
+                KeyType: HASH
+              - AttributeName: createdAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
         StreamSpecification:
           StreamViewType: NEW_IMAGE
         TimeToLiveSpecification:
