--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@aws-sdk/util-dynamodb": "^3.418.0",
     "@middy/core": "^4.6.4",
     "@middy/http-header-normalizer": "^4.6.4",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "p-queue": "^6.6.2"
   }
 }
