--- a/serverless.yml
+++ b/serverless.yml
@@ -127,6 +127,11 @@ functions:
           - dynamodb:BatchGetItem
         Resource:
           - !GetAtt SubscriberFollowingTable.Arn
+      - Effect: "Allow"
+        Action:
+          - dynamodb:BatchWriteItem
+        Resource:
+          - !GetAtt PostsTable.Arn
 
   syncSubscriberFollowing:
     handler: ./src/endpoints/syncSubscriberFollowing/index.handler
