--- a/serverless.yml
+++ b/serverless.yml
@@ -106,6 +106,7 @@ functions:
   readFirehose:
     handler: ./src/endpoints/readFirehose/index.handler
     timeout: 240
+    memorySize: 512
     events:
       - schedule:
           rate: rate(5 minutes)
