--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,7 @@ provider:
     MUTE_WORDS_TABLE: ${self:custom.muteWordsTable}
     APP_STATUS_TABLE: ${self:custom.appStatusTable}
     POSTS_TABLE: ${self:custom.postsTable}
+    FEED_TABLE: ${self:custom.feedTable}
     BLUESKY_SERVICE_USER_DID: ${ssm:/bluesky-feeds/${self:provider.stage}/service/user-did}
 
 
@@ -36,6 +37,7 @@ custom:
   muteWordsTable: ${self:service}-${self:provider.stage}-mute-words
   appStatusTable: ${self:service}-${self:provider.stage}-app-status
   postsTable: ${self:service}-${self:provider.stage}-posts
+  feedTable: ${self:service}-${self:provider.stage}-feed
   blueskyAuth:
     identifier: ${ssm:/bluesky-feeds/${self:provider.stage}/service/identifier}
     password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
@@ -133,6 +135,30 @@ functions:
           - dynamodb:BatchWriteItem
         Resource:
           - !GetAtt PostsTable.Arn
+
+  readFirehose-distPosts:
+    handler: ./src/endpoints/readFirehose/distributePosts.handler
+    events:
+      - stream:
+          type: dynamodb
+          arn:
+            Fn::GetAtt: [PostsTable, StreamArn]
+          startingPosition: LATEST
+          batchSize: 1
+          maximumRetryAttempts: 5
+          filterPatterns:
+            - eventName: [INSERT, REMOVE]
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - dynamodb:Query
+        Resource:
+          - !GetAtt SubscriberFollowingTable.Arn
+      - Effect: "Allow"
+        Action:
+          - dynamodb:BatchWriteItem
+        Resource:
+          - !GetAtt FeedTable.Arn
 
   syncSubscriberFollowing:
     handler: ./src/endpoints/syncSubscriberFollowing/index.handler
@@ -253,6 +279,45 @@ resources:
               ProjectionType: ALL
         StreamSpecification:
           StreamViewType: NEW_IMAGE
+        TimeToLiveSpecification:
+          AttributeName: expiresAt
+          Enabled: True
+
+    FeedTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.feedTable}
+        AttributeDefinitions:
+          - AttributeName: subscriberDid
+            AttributeType: S
+          - AttributeName: uri
+            AttributeType: S
+          - AttributeName: createdAt
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: subscriberDid
+            KeyType: HASH
+          - AttributeName: uri
+            KeyType: RANGE
+        LocalSecondaryIndexes:
+          - IndexName: ByCreatedAt
+            KeySchema:
+              - AttributeName: subscriberDid
+                KeyType: HASH
+              - AttributeName: createdAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: KEYS_ONLY
+        GlobalSecondaryIndexes:
+          - IndexName: ByPostUri
+            KeySchema:
+              - AttributeName: uri
+                KeyType: HASH
+              - AttributeName: subscriberDid
+                KeyType: RANGE
+            Projection:
+              ProjectionType: KEYS_ONLY
         TimeToLiveSpecification:
           AttributeName: expiresAt
           Enabled: True
