--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,7 @@ custom:
   appStatusTable: ${self:service}-${self:provider.stage}-app-status
   postsTable: ${self:service}-${self:provider.stage}-posts
   feedTable: ${self:service}-${self:provider.stage}-feed
+  externalResolveQueue: ${self:service}-${self:provider.stage}-external-resolve.fifo
   blueskyAuth:
     identifier: ${ssm:/bluesky-feeds/${self:provider.stage}/service/identifier}
     password: ${ssm:/bluesky-feeds/${self:provider.stage}/service/password}
@@ -184,14 +185,29 @@ functions:
                 NewImage:
                   resolvedStatus:
                     S: [UNRESOLVED]
+      - sqs:
+          arn:
+            Fn::GetAtt: [ExternalResolveQueue, Arn]
+          batchSize: 1
+    environment:
+      EXTERNAL_RESOLVE_QUEUE_URL: !Ref ExternalResolveQueue
+      BLUESKY_SERVICE_IDENTIFIER: ${self:custom.blueskyAuth.identifier}
+      BLUESKY_SERVICE_PASSWORD: ${self:custom.blueskyAuth.password}
     iamRoleStatements:
       - Effect: "Allow"
         Action:
           - dynamodb:BatchGetItem
           - dynamodb:GetItem
           - dynamodb:PutItem
+          - dynamodb:Query
         Resource:
           - !GetAtt PostsTable.Arn
+          - !Sub "${PostsTable.Arn}/*"
+      - Effect: "Allow"
+        Action:
+          - sqs:SendMessage
+        Resource:
+          - !GetAtt ExternalResolveQueue.Arn
 
   syncSubscriberFollowing:
     handler: ./src/endpoints/syncSubscriberFollowing/index.handler
@@ -424,3 +440,9 @@ resources:
         KeySchema:
           - AttributeName: setting
             KeyType: HASH
+
+    ExternalResolveQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: ${self:custom.externalResolveQueue}
+        FifoQueue: True
