fix external resolve

--- a/serverless.yml
+++ b/serverless.yml
@@ -197,6 +197,7 @@ functions:
       - Effect: "Allow"
         Action:
           - dynamodb:BatchGetItem
+          - dynamodb:BatchWriteItem
           - dynamodb:GetItem
           - dynamodb:PutItem
           - dynamodb:Query
