Use at-proto/identity instead of at-proto/did-resolver
this fixes auth issues wiht the new blue sky tokens

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.6.16",
-    "@atproto/did-resolver": "^0.1.0",
+    "@atproto/identity": "^0.2.1",
     "@atproto/repo": "^0.3.2",
     "@atproto/xrpc": "^0.3.1",
     "@atproto/xrpc-server": "^0.3.1",
