--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@atproto/repo": "^0.3.2",
     "@atproto/xrpc": "^0.3.1",
     "@atproto/xrpc-server": "^0.3.1",
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.428.0",
     "@aws-sdk/client-dynamodb": "^3.418.0",
+    "@aws-sdk/client-kms": "^3.428.0",
     "@aws-sdk/client-sqs": "^3.418.0",
     "@aws-sdk/lib-dynamodb": "^3.418.0",
     "@aws-sdk/util-dynamodb": "^3.418.0",
     "@middy/core": "^4.6.4",
     "@middy/http-header-normalizer": "^4.6.4",
+    "base64url": "^3.0.1",
     "http-errors": "^2.0.0",
     "p-queue": "^6.6.2",
     "serverless-plugin-log-retention": "^2.0.0"
