--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "lint": "eslint src",
-    "prettier": "prettier 'src/**/*.ts' --write"
+    "prettier": "prettier 'src/**/*.ts' --write",
+    "build:public": "eval \"$(node setEnv.js)\" && rm -rf dist && cp -r public dist && rm dist/*.ejs && ejs ./public/index.html.ejs -o ./dist/index.html",
+    "deploy:public": "eval \"$(node setEnv.js)\" && npm run build:public && aws s3 sync dist/ s3://${CONTENT_BUCKET}/bluesky-feeds-web/${TARGET_STAGE}/ --cache-control 'max-age=31536000' --exclude '*.html' && aws s3 sync dist/ s3://${CONTENT_BUCKET}/bluesky-feeds-web/${TARGET_STAGE}/ --exclude '*' --include '*.html' --cache-control no-cache"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -15,6 +17,7 @@
     "@types/ws": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "ejs": "^3.1.9",
     "eslint": "^8.50.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
@@ -36,6 +39,7 @@
     "@aws-sdk/client-dynamodb": "^3.418.0",
     "@aws-sdk/client-kms": "^3.428.0",
     "@aws-sdk/client-sqs": "^3.418.0",
+    "@aws-sdk/client-ssm": "^3.428.0",
     "@aws-sdk/lib-dynamodb": "^3.418.0",
     "@aws-sdk/util-dynamodb": "^3.418.0",
     "@middy/core": "^4.6.4",
